[package]
name = "zdc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
comfy-table = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "3"
regex = "1"
strsim = "0.11"
