[package]
name = "zdc"
version = "0.1.0"
edition = "2024"
description = "vZDC CLI — charts, METAR/TAF, preferred routes, and more"
license = "GNU GPLv3"
repository = "https://github.com/vainnor/zdc-cli"
readme = "README.md"
homepage = "https://github.com/vainnor/zdc-cli"
keywords = ["aviation", "metar", "taf", "charts", "cli"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/zdc"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"
dirs = "6.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
comfy-table = "7.2.2"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3.3"
regex = "1"
strsim = "0.11"
